tests/snapshots/messages__type25_addressed_unstructured.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,I1mg=5KcNJ;7:wP,4*65\")"
---
SingleSlotBinaryMessage(
    SingleSlotBinaryMessage {
        message_type: 25,
        repeat_indicator: 0,
        mmsi: 123456789,
        addressed: true,
        structured: false,
        dest_mmsi: Some(
            987654321,
        ),
        app_id: None,
        data_bits: 26,
        data: [
            202,
            254,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
)
