tests/snapshots/messages__type25_broadcast_structured.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,I1mg=5DB=0420h,4*0D\")"
---
SingleSlotBinaryMessage(
    SingleSlotBinaryMessage {
        message_type: 25,
        repeat_indicator: 0,
        mmsi: 123456789,
        addressed: false,
        structured: true,
        dest_mmsi: None,
        app_id: Some(
            4660,
        ),
        data_bits: 32,
        data: [
            1,
            2,
            3,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
)
