tests/snapshots/messages__type2_barbados.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,24SaQh500G0Cu7nMErpJ680N0@9C,0*3F\")"
---
PositionReport(
    PositionReport {
        message_type: 2,
        repeat_indicator: 0,
        mmsi: 305816000,
        navigation_status: Some(
            Moored,
        ),
        rate_of_turn: None,
        speed_over_ground: Some(
            2.3,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            4.359245,
        ),
        latitude: Some(
            51.27973,
        ),
        course_over_ground: Some(
            258.4,
        ),
        true_heading: Some(
            256,
        ),
        timestamp: 15,
        maneuver_indicator: None,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 4,
                sub_message: SlotNumber(
                    595,
                ),
            },
        ),
    },
)
