tests/snapshots/messages__type2_north_sea.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,239a=5RP0wPBGTpMKnQP`gv<R<1t,0*4C\")"
---
PositionReport(
    PositionReport {
        message_type: 2,
        repeat_indicator: 0,
        mmsi: 211438870,
        navigation_status: Some(
            NotUnderCommand,
        ),
        rate_of_turn: Some(
            NotAvailable,
        ),
        speed_over_ground: Some(
            6.3,
        ),
        position_accuracy: Dgps,
        longitude: Some(
            4.0126333,
        ),
        latitude: Some(
            51.441715,
        ),
        course_over_ground: Some(
            16.2,
        ),
        true_heading: None,
        timestamp: 6,
        maneuver_indicator: Some(
            NoSpecialManeuver,
        ),
        raim: true,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 3,
                sub_message: ReceivedStations(
                    124,
                ),
            },
        ),
    },
)
